fix: overflow for debug action bar

--- a/packages/debug/src/browser/view/debug-configuration.module.less
+++ b/packages/debug/src/browser/view/debug-configuration.module.less
@@ -8,6 +8,7 @@
   padding-left: 8px;
   justify-content: flex-start;
   pointer-events: all;
+  overflow: auto;
 
   .kt_debug_actions {
     display: flex;
